--- a/tex/main.tex
+++ b/tex/main.tex
@@ -12,7 +12,9 @@
 \def\Extended{}
 \newif\ifFIGS
 \FIGSfalse  
-%\FIGStrue 
+\FIGStrue
+
+\def\METHODS{Online Methods\xspace}
 
 %#### Result val
 % corr of gemietric mean to IRAT mergence
@@ -63,7 +65,7 @@
   
 \vspace{10pt}
 \section*{Introduction}
-Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing  sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response hinges on  successfully inoculating a substantial fraction of the  population with a  reformulated  vaccine annually~\cite{boni2008vaccination,dos2016influenza}.  Among numerous factors that hinder optimal design of the seasonal flu shot, failing to correctly predict the dominant strain in the upcoming season dramatically reduces vaccine effectiveness~\cite{tricco2013comparing}, and despite  recent advances~\cite{neher2014predicting,huddleston2020integrating} such predictions remain imperfect. In addition to  the seasonal  epidemic, novel \infl strains spilling over into humans from animal reservoirs have triggered  pandemics  at least four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of the  sudden emergence of \cov and the ensuing devastating pandemic fresh in our minds, a looming question  is whether we can  preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence is common animal hosts, can easily incorporate genes from multiple strains and (re)emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns}, and   thus harbors  a high potential  of triggering the next  pandemic.
+Influenza viruses constantly evolve~\cite{dos2016influenza},  rapidly producing  sequence alterations over a time scale of months  that  perturb surface protein structures sufficiently to evade the prevailing host immunity, and cause the  recurring seasonal flu epidemic. These periodic  infection peaks claim a quarter to half a million lives~\cite{huddleston2020integrating} globally,  and currently our response hinges on  successfully inoculating a substantial fraction of the  population with a  reformulated  vaccine annually~\cite{boni2008vaccination,dos2016influenza}.  Among numerous factors that hinder optimal design of the seasonal flu shot, failing to correctly predict the dominant strain in the upcoming season dramatically reduces vaccine effectiveness~\cite{tricco2013comparing}, and despite  recent advances~\cite{neher2014predicting,huddleston2020integrating} such predictions remain imperfect. In addition to  the seasonal  epidemic, novel \infl strains spilling over into humans from animal reservoirs have triggered  pandemics  at least four times (1918 Spanish flu/H1N1, 1957 Asian flu/H2N2, 1968 hongkong flu/H3N2, 2009 swine flu/H1N1) in the past 100 years~\cite{shao2017evolution}. With the memory of the  sudden emergence of \cov and the ensuing devastating pandemic fresh in our minds, a looming question  is whether we can  preempt and mitigate such events in the future.  \infl,  partly on account of its segmented genome and its wide prevalence in common animal hosts, can easily incorporate genes from multiple strains and (re)emerge as novel human pathogens~\cite{reid2003origin,vergara2014ns}, and   thus harbors  a high potential  of triggering the next  pandemic.
 
 \input{figuresandtables.tex}
 
@@ -73,7 +75,7 @@ A possible approach to mitigating such risk is to identify  strains in animal ho
 CDC's current solution to preempting strain-specific emergence  is the Influenza Risk Assessment Tool (IRAT)~\cite{Influenz24:online}, which  uses  ten weighted and pre-determined risk elements evaluated by a panel of 
 %
 % to factor in   1) expert-selected properties of the strain, 2) attributes of the population, and 3) ecology and epidemiological characteristics~\cite{Influenz24:online}.
- subject matter experts from  key organizations such as the CDC, the Food and Drug Administration (FDA), the Animal and Plant Health Inspection Service (APHIS), and the Agricultural Research Service (ARS). Each SME scores 1 to 3 elements, from the total set comprising the number of recorded human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, infections in animals, genomic analysis, antigenic relatedness, global distribution in animals, disease severity and  pathogenesis, and antiviral treatment options. The point estimate scores for each  element are averaged, scaled by predetermined weights, and summed to give an aggregate score for each of the two IRAT risk questions: 1) the potential risk for emergence in humans and 2) the potential public health impact if the virus gains HH capability. Generally  the scores obtained are subjective to some degree, with  variability observed across SME  estimates. Additionally, evaluating the score  involves multiple experimental assays, possibly taking  weeks to compile the final  evaluation for a single strain or lineage. This results in  a scalability bottleneck: with   global  efforts   collecting  thousands of sequences annually,  IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output.%, and thus have low odds of successfully  preempting a \infl pandemic. 
+ subject matter experts (SME) from  key organizations such as the CDC, the Food and Drug Administration (FDA), the Animal and Plant Health Inspection Service (APHIS), and the Agricultural Research Service (ARS). Each SME scores 1 to 3 elements, from the total set comprising the number of recorded human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, infections in animals, genomic analysis, antigenic relatedness, global distribution in animals, disease severity and  pathogenesis, and antiviral treatment options. The point estimate scores for each  element are averaged, scaled by predetermined weights, and summed to give an aggregate score for each of the two IRAT risk questions: 1) the potential risk for emergence in humans and 2) the potential public health impact if the virus gains HH capability. Generally  the scores obtained are subjective to some degree, with  variability observed across SME  estimates. Additionally, evaluating the score  involves multiple experimental assays, possibly taking  weeks to compile the final  evaluation for a single strain or lineage. This results in  a scalability bottleneck: with   global  efforts   collecting  thousands of sequences annually,  IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output.%, and thus have low odds of successfully  preempting a \infl pandemic. 
 
 
 
@@ -89,7 +91,7 @@ CDC's current solution to preempting strain-specific emergence  is the Influenza
 
 In this study, we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, to numerically estimate the probability $Pr(x \rightarrow y)$ of a strain $x$ spontaneously giving rise to  $y$. We show that this capability is key to preempting  strains which would be in circulation in future, and thus 1) reliably forecast dominant strains of seasonal epidemics, and 2) approximate IRAT scores of non-human strains without direct experimental assays, and without the involvement of SMEs.
 
-To uncover relevant evolutionary constraints, we analyzed observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimated the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the emergent constraints at play,  as well as  the variation of mutational probabilities and the potential residue replacements from one positional index to the next along the AA sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. Similalrly, recently reported algorithms such  as FluLeap~\cite{eng2014predicting}  which identfies host tropism from sequence data, or estimating risk posed by different viral species~\cite{grange2021ranking} do not allow train-specific risk assessment.
+To uncover relevant evolutionary constraints, we analyzed observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimated the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the emergent constraints at play,  as well as  the variation of mutational probabilities and the potential residue replacements from one positional index to the next along the AA sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. Similarly, recently reported algorithms such  as FluLeap~\cite{eng2014predicting}  which identfies host tropism from sequence data, or estimating risk posed by different viral species~\cite{grange2021ranking} do not allow strain-specific risk assessment.
 
 The genomic dependencies we uncover are shaped by  a  functional necessity of conserving/augmenting  fitness in the wild. A  strain must be sufficiently common  to be recorded, implying that the sequences from public databases that we train  with have  high replicative fitness. Lacking kinetic proofreading  in  RNA-polymerase,  \infl integrates  faulty nucleotides   at a relatively high rate ($10^{-3}$ to $10^{-4}$) during  replication~\cite{ahlquist2002rna,chen2006avian}. However, few   of these variations are actually viable, with only specific patterns  maintaining/gaining fitness;  leading to emergent dependencies between such changes. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  track these  constraints, automatically reflecting the effect of  evolving host immunity, and the current background strain distribution.  
 
@@ -101,25 +103,25 @@ Thus, we make use of  the time and place of collection, and the viral subtype.
 Using no detailed phenotypic charcarerticstics such as deep mutational scanning (DMS) assays is advantageous, since antigenic characterization of  \infl strains tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}; however,  incorporation of DMS data has been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic and subtype information, our approach is able to distill deep emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies for \infl.
 
  
-Inference of the \enet components is the first step in our approach, which then induces  an intrinsic distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in Methods) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the   dependencies that the \enet infers, and adapts to the specific subtype, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{SI-thmbnd} in Supplementary text) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to the prediction of  a biased outcome when we  toss a fair coin. While we expect to get roughly equal number of heads and tails with high probability,  large deviations, $i.e$, substantial deviations from the expected fraction,  do happen, and the probability of such rare events is explicitly quantifiable~\cite{varadhan2010large} with elementary results from large deviation theory. Generalizing to non-uniform conditional probabilities inferred by the \enet, the likelihood of a spontaneous transition  by random chance may also be similarly bounded. Unlike the edit distance, the \qdist  between two fixed sequences may change even if only the background population changes (SI-Table~\ref{SI-tabex}, example where  the distance between two fixed  sequences vary when we vary their collection years, and hence the environment or the background strain distribution). Thus, we can not only estimate the risk of emergence of a particular animal strain, but also track its evoltion over time [Figure ref XXX].
+Inference of the \enet components is the first step in our approach, which then induces  an intrinsic distance metric between genomic sequences. The \qdist  (Eq.~\eqref{q-distance} in \METHODS) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the position-specific conditional distributions, averaged over the entire sequence length. Unlike the classical edit distance measuring the number of mutations by which the sequences differ, the \qdist is informed by the   dependencies that the \enet infers, and adapts to the specific subtype, allele frequencies, and variations in the background population. Central to our approach is the theoretical result (Theorem~\ref{thmbnd} in \METHODS) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to the prediction of  a biased outcome when we  toss a fair coin. While we expect to get roughly equal number of heads and tails with high probability,  large deviations, $i.e$, substantial deviations from the expected fraction,  do happen, and the probability of such rare events is explicitly quantifiable~\cite{varadhan2010large} with elementary results from large deviation theory. Generalizing to non-uniform conditional probabilities inferred by the \enet, the likelihood of a spontaneous transition  by random chance may also be similarly bounded. Unlike the edit distance, the \qdist  between two fixed sequences may change even if only the background population changes (SI-Table~\ref{SI-tabex}, example where  the distance between two fixed  sequences vary when we vary their collection years, and hence the environment or the background strain distribution). Thus, we can not only estimate the risk of emergence of a particular animal strain, but also track the evolution of emergence risk over time [Figure ref XXX].
 
 %Sequences may have a large \qdist and a small edit distance, and vice versa (although on average the two distances tend to be positively correlated, see SI-Table~\ref{SI-tabcor}).
 
 
 
-The ability of the \enet framework to determine the numerical odds of spontaneous jump $ Pr(x \rightarrow y)$ (Fig.~\ref{figscheme}) suggests that we are able to frame the problem of forecasting  dominant strain(s), and that of estimating the  pandemic potential of an animal strain as  mathematical propositions (albeit with some simplifying assumptions), with  approximate solutions (Fig.~\ref{figscheme}c-d). Thus,  a dominant strain for an upcoming  season may be identified as one which maximizes the joint probability of simultaneosly arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).  This does not deterministically specify the dominant strain, but a strain satisfying this criterion  has  high odds of emerging as the dominant one. And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
+The ability of the \enet framework to determine the numerical odds of spontaneous jump $ Pr(x \rightarrow y)$ (Fig.~\ref{figscheme}) suggests that we are able to frame the problem of forecasting  dominant strain(s), and that of estimating the  pandemic potential of an animal strain as  mathematical propositions (albeit with some simplifying assumptions), with  approximate solutions (Fig.~\ref{figscheme}c-d). Thus,  a dominant strain for an upcoming  season may be identified as one which maximizes the joint probability of simultaneously arising from each (or most)  of the currently circulating strains (Fig.~\ref{figscheme}c).  This does not deterministically specify the dominant strain, but a strain satisfying this criterion  has  high odds of emerging as the dominant one. And, a pandemic risk score of a novel strain may be estimated by the probability of it giving rise to a well-adapted human strain.  We validate  our proposed solutions for these problems in out-of-sample data.
 %Thus, the \qdist enables us to estimate the numerical value of the probability $Pr(x \rightarrow y)$, and hence solve the mathematical propositions described above.
 %
 
-In the context of the first problem namely the  forecast of dominant strain(s) for the next flu season,  we derive the following search criteria (See Methods) from the proposition stated above, to identify a historical strain that is expected to be close to the upcoming season's dominant strain:
+In the context of  forecasting  dominant strain(s) for the next flu season,  we derive the following search criteria (See \METHODS) from the proposition stated above, to identify a historical strain that is expected to be close to the upcoming season's dominant strain:
 %
 \calign{
 \label{dompred}&\dst = \argmin_{y \in \cup_{\tau \leqq t} H^\tau}  \left ( \sum_{x\in H^t}  \theta^{[t]}(x,y) - \abs{H^t}A \ln \mem{y}  \right )
 }%
-where $\dst$ is the predicted dominant strain  at time $t+\delta$, $H^t$ is the set of currently circulating human strains at time $t$  observed over the past year, $\theta^{[t]}$ is the \qdist informed by the inferred \enet using sequences in $H^t$, $\mem{y}$ is the estimated probability of strain $y$ being generated by the \enet, and $A$ is a constant dependent on the sequence length and significance threshold used (See Methods). Note that the first term gets the solution close to the centroid of the current strain distribution (in the \qdist metric, which is different from the centroid if the standard edit distance is used), and the second term relates to how common the genomic patterns are amongst recent human strains. 
+where $\dst$ is a predicted dominant strain  at time $t+\delta$, $H^t$ is the set of currently circulating human strains at time $t$  observed over the past year, $\theta^{[t]}$ is the \qdist informed by the inferred \enet using sequences in $H^t$, $\mem{y}$ is the estimated probability of strain $y$ being generated by the \enet, and $A$ is a constant dependent on the sequence length and significance threshold used (See \METHODS). The first term gets the solution close to the centroid of the current strain distribution (in the \qdist metric, which is different from the centroid if the standard edit distance is used), and the second term relates to how common the genomic patterns are amongst recent human strains. 
 
-Prediction of the future dominant strain as  a close historical strain  allows direct validation of the approach with past WHO recommendations. Notably, the flu shot  is annually prepared at least six months in advance, and is based on a cocktail of historical strains determined by the WHO via global surveillance~\cite{agor2018models}, hoping to match the circulating strain(s) in the upcoming  season (recommendations for the northern hemisphere are given in February, while that for the southern hemisphere are given at the end of December the previous year). % A variety of hard-to-model effects, despite observed cross-reactive effects~\cite{tricco2013comparing}, have limited vaccine effectiveness in recent years~\cite{cdceff}.
-For each year of the past two decades, we calculated strain forecasts using  Eq.~\eqref{dompred} with data available 6 months before the target season. % is essentially an approximation to the corrected  ``q''-centroid of the strain distribution from the previous season (See  Methods).
+Prediction of the future dominant strain as  a close historical strain  allows direct validation of the approach with past WHO recommendations. Notably, the flu shot  is annually prepared at least six months in advance, and is based on a recommended cocktail of historical strains determined via global surveillance~\cite{agor2018models}, hoping to match the circulating strain(s) in the upcoming  season (recommendations for the northern hemisphere are given in February, while that for the southern hemisphere are given at the end of the previous year). % A variety of hard-to-model effects, despite observed cross-reactive effects~\cite{tricco2013comparing}, have limited vaccine effectiveness in recent years~\cite{cdceff}.
+For each year of the past two decades, we calculated strain forecasts using  Eq.~\eqref{dompred} with data available 6 months before the target season. % is essentially an approximation to the corrected  ``q''-centroid of the strain distribution from the previous season (See  \METHODS).
 We  measured forecast performance by the number of mutations by which the predicted HA/NA AA sequence deviated from the realized dominant strain, which we approximated as the one closest to the centroid of the observed strains in the target season in the sense of the edit distance $i.e.$ number of mutations. Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres. %The \enet  predictions consistently outperform the WHO recommendations. % For H1N1 HA, the \enet induced recommendation outperforms the WHO suggestion by $>33\%$ on average over the last two decades, and $>71\%$ on average in the last decade. The gains for H1N1 NA over the same time periods are $>15\%$ and $>52\%$, respectively. For H3N2 HA, the \enet induced recommendation outperforms the WHO suggestion by $>37\%$ on average over the last two decades, and $>40\%$ in the last decade. The gains for H3N2 NA over the same time periods are $>14\%$ and $>15\%$, respectively. Finding multi-cluster predictions has the potential to yield even more improved results, as seen in Fig.~\ref{figseasonal} and SI-Table~\ref{SI-tabrec8} through SI-Table~\ref{SI-tabrec11}. \DQS{what is multicluster}
 %
 %\DQS{concrete numbers}
@@ -136,8 +138,8 @@ scales as the average log-likelihood of $Pr(x \rightarrow y)$ where $y$ is any h
 
 To validate our score against CDC-estimated IRAT emergence scores, we construct \enet models for HA and NA segments using all human strains of the same  subtypes collected within the past year of the IRAT assessment date. Since our measure is time-varying, making sure that we estimate the risk at the time of the IRAT assessment is important. For example, the A/swine/Shandong/1207/2016 strain was assessed by IRAT in July 2020, so we  use human H1N1 strains collected  between July 1, 2019 - June 30, 2020. For sub-types with few recorded human strains (H1N2, H5N1, H5N6, H7N7, H9N2), we consider all human strains of the corresponding subtypes collected upto the IRAT evaluation date. We then compute the average \qdist between a given animal  strain  and the circulating human strains for both HA and HA segments (using Eq.~\eqref{eqrho}), with finally reporting the geometric mean of the estimates as the estimated risk. Considering IRAT scores of 22 strains published by the CDC, we find strong support  (correlation of $-0.7032$, pvalue $< 0.005$, Fig.~\ref{figirat}) for this claim. Importantly, each \erisk score  is  computable in approximately $8-12$ seconds as opposed to potentially weeks taken by IRAT experimental assays, and this dramatic reduction in time and cost  opens the door to fully exploiting the  current surveillance capacity.
 
-Importantly, our \erisk is a function of time; the background distribution of strains matters, and
-we show that recomputing the risks for a different time changes (worsens) the correlation with the IRAT estimate. We also show how the risks evolve over time according to our model (See Table~\ref{tabwwXXXX}  and SI-Fig.~\ref{SI-irat})
+Importantly, our \erisk is a function of time, and
+we show that recomputing the risks for a different time changes (worsens) the correlation with the IRAT estimate. We also show how the estimated  risk of emergence evolve over time (See Table~\ref{tabwwXXXX}  and SI-Fig.~\ref{SI-irat})
 
 To map the \enet distances to more recognizable IRAT scores, we  train a linear model to estimate the IRAT emergence score from the \erisk values. Also, since the CDC-estimated IRAT impact score is strongly correlated with their IRAT emergence scores (correlation of $0.8015$), we  trained a linear model to estimate the impact score as well from the  \erisk. We show these results in Table~\ref{tabXXXX}. With our linear models trained, we compute a simulated IRAT analysis of all \infl strains collected over past two years (6,254 sequences in total). (Table~\ref{tabeeeXXXX} shows the top 5 strains of each available subtype). The geolocation of the strains, along with risk information is shown in Fig.~\ref{figXXXXXeee}.
 
@@ -242,14 +244,14 @@ The \qdist calculation   is currently limited to analogous sequences (such as po
 % and GISAID:  \href{https://www.gisaid.org/}{https://www.gisaid.org/}
 % see SI-Table~\ref{SI-tabseq}), uncovering a network of  dependencies between individual mutations revealed through subtle variations of the aligned sequences. The representation of these dependencies as a recursive forest of conditional inference trees is referred to as the \enet (see Fig.~\ref{figscheme}). 
 % 
-% Finally, we define the q-distance (see Eq.~\eqref{q-distance} in Methods) as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of these conditional distributions from one sequence to another, averaged over the entire sequence. The q-distance, informed by the dependencies modeled by the inferred {\qnet}s, adapts to the specific organism, allele frequencies, and variations in the background population. Invoking Sanov's theorem on large deviations~\cite{cover}, we show  that the  likelihood of spontaneous change is bounded above and below by a simple exponential function of the  q-distance. 
+% Finally, we define the q-distance (see Eq.~\eqref{q-distance} in \METHODS) as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of these conditional distributions from one sequence to another, averaged over the entire sequence. The q-distance, informed by the dependencies modeled by the inferred {\qnet}s, adapts to the specific organism, allele frequencies, and variations in the background population. Invoking Sanov's theorem on large deviations~\cite{cover}, we show  that the  likelihood of spontaneous change is bounded above and below by a simple exponential function of the  q-distance. 
 
 % The mathematical intuition behind relating the \qdist distance to change-probability  is the same as in the prediction of  a biased outcome when we sequentially toss a fair coin. With an overwhelming probability, such an experiment with a fair coin should result in roughly equal number of heads and tails. However, large deviations, $i.e$, substantial differences from the expected fraction of heads and tails can happen, and the probability of such rare events is quantifiable~\cite{varadhan2010large} with existing theory. We show here that the likelihood of a spontaneous transition of a genomic sequence to a  different variant by random chance may also be similarly bounded, given we have the \qnet as  an estimated model of the evolutionary constraints. As an important distinction from the edit distance, the \qdist  between two sequences may change even if only the background population changes (see SI-Table~\ref{SI-tabex}, where  the distance between two  fixed sequences vary when we vary their collection years). Sequences may have a large \qdist and a small edit distance, and vice versa (although on average the two distances tend to be positively correlated, see SI-Table~\ref{SI-tabcor}).  %Hence for tracking drift in Influenza A, we construct a seasonal \qnet for each sub-type and protein that we consider.
 
 
 % For predicting future strains, we hypothesized that since the probability of a drift exponentially decreases with an increasing q-distance, the centroid of the strain distribution in our metric will change slowly. If true, the strain selected closest to the ``q''-centroid will be a good approximation of next season's dominant strain.
 
-% For each year of the last two decades, we computed our prediction for the current season's dominant strain as the strain selected from previous seasons closet to the ``q''-centroid of the strain distribution from the previous season (See Eq.~\eqref{dompred} in Methods). We then computed the dominant strain in each season as the centroid of the strain distribution observed in a given season in the classical sense (no. of mutations), since the edit distance metric is widely used and offers a point of comparison between WHO predictions and \qnet predictions. Note that the recommendations for the northern hemisphere are given in February, while that for the southern hemisphere are given at the end of December the previous year, keeping in mind that the flu season in the south begins a few months early, as described in Fig.~\ref{figseasonal}. Finally, we computed the edit distance (no. of mutations) between the dominant strain and the WHO and \qnet predictions.
+% For each year of the last two decades, we computed our prediction for the current season's dominant strain as the strain selected from previous seasons closet to the ``q''-centroid of the strain distribution from the previous season (See Eq.~\eqref{dompred} in \METHODS). We then computed the dominant strain in each season as the centroid of the strain distribution observed in a given season in the classical sense (no. of mutations), since the edit distance metric is widely used and offers a point of comparison between WHO predictions and \qnet predictions. Note that the recommendations for the northern hemisphere are given in February, while that for the southern hemisphere are given at the end of December the previous year, keeping in mind that the flu season in the south begins a few months early, as described in Fig.~\ref{figseasonal}. Finally, we computed the edit distance (no. of mutations) between the dominant strain and the WHO and \qnet predictions.
 
 % Our second application aims to compare emergence risk grades given by the CDC through its Influenza Risk Assessment Tool (IRAT) with results using our q-distance metric. While IRAT uses a combination of 10 weighted risk elements evaluated slowly over the course of several months per strain, we attempt to quantify emergence risk quickly with the q-distance metric. We looked at the same strains that were analyzed by IRAT. For each strain previously analyzed by IRAT, we construct \qnet models for HA and NA segments using all human strains of the same variety circulating in the year prior to risk assessment. For example, the "A/swine/Shandong/1207/2016" strain was assessed by IRAT in July 2020, so we will use human H1N1 strains circulating between July 1, 2019 through June 30, 2020. For sub-types with few human strains (H1N2, H5N1, H5N6, H7N7, H9N2), we only use the upper bound of the date. We then compute the average q-distance between the strain in question and the circulating human strains for both HA and HA segments. Seven of the 23 strains are not included in our comparison due to having zero or too few human strains in the sample space to construct a \qnet; see Supplementary Text, SI-Table~\ref{SI-irattab}. We hypothesize that a lower average q-distance between the strain in question and circulating human strains should correspond to a higher emergence risk. Hence, we expect to see a high negative correlation between q-distance and IRAT grade, which assigns 1 to be the lowest risk and 10 to be the highest risk.
 
@@ -280,7 +282,7 @@ The \qdist calculation   is currently limited to analogous sequences (such as po
 
 
 
-\section*{Methods}
+\section*{\METHODS}
 \input{method}
 
 
@@ -394,7 +396,7 @@ Focusing on the average localization of the QNT to WHO deviations in the HA mole
 }
 
 
-\section*{Brief Methods}
+\section*{Brief \METHODS}
 \DQS{review more craefully phenotypic info used in teh literature and why it is claimed to be necessary in those papers. Why dont we need it}
 A key barrier to making progress  on both the problems cited above, namely predicting the dominant strain(s) in seasonal flu, as well as estimating the numerical odds of an animal strain  to spillover and attain HH capability,  is our limited understanding of the emergent dependencies across individual mutations that  constrain evolutionary trajectories. Thus, to the best of our knowledge, the state of the art has no tools to estimate the numerical likelihood of specific mutations in the future, and in general  the likelihood of a wild strain spontaneously giving rise to another by random chance. Currently, this likelihood is often qualitatively equated to sequence similarity, which is measured by the number of mutations it takes to change one strain to another. However, the odds of one sequence mutating to another is not just a function of how many mutations separate them, but also of how specific mutations incrementally affect fitness. Ignoring the constraints arising from the need to conserve function makes any assessment of the mutation likelihood open to subjective bias. Here, we show that a precise calculation is possible when sequence similarity is evaluated via a new biologically-aware metric, which we call the \textit{q-distance}.
 
